[package]
name = "http-test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.4"
tokio-stream = "0.1.12"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
futures = "0.3"
futures-util = "0.3.26"
tokio-util = "0.7.7"
rocksdb = "0.19.0"